
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>gg.solarmc</groupId>
		<artifactId>solar-parent</artifactId>
		<version>0.4.0</version>
	</parent>

	<artifactId>solarpaper-parent</artifactId>
	<version>1.12.2-R0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		<slf4j.version>1.7.30</slf4j.version>
		<log4j.version>2.14.0</log4j.version>
		<junit5.version>5.7.1</junit5.version>
		<dataloader.version>0.3.0</dataloader.version>
	</properties>

	<modules>
		<module>SolarPaper-Server</module>
		<module>SolarPaper-API</module>
		<module>SolarPaper-PostServer</module>
		<module>SolarPaper-Assistant</module>
	</modules>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>15</source>
						<target>15</target>
						<compilerArgs>--enable-preview</compilerArgs>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-api</artifactId>
				<version>${junit5.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.13.1</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.hamcrest</groupId>
				<artifactId>hamcrest-library</artifactId>
				<version>1.3</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<repositories>
		<repository>
			<id>solar-releases</id>
			<url>https://mvn-repo.platinum-mc.com/releases</url>
		</repository>
	</repositories>
</project>
